# api/controllers/estudiante.js
@@ -6,6 +6,7 @@
 
 var util = require('util');
 var mysql = require('mysql');
+var http = require('http');
 
 const datasource = process.env.DATASOURCE || 'DSN=test2';
 
@@ -14,10 +15,10 @@ module.exports = {
     console.log( Date() + ": /alta" );  
     try {
         var con = mysql.createConnection({
-          host: "localhost",
-          database : 'estudiante',
-          user: "root",
-          password: "password",
+          host: "mysql://kv4l0861ryo46pmj:jz5iyomcy0gw8fo5@durvbryvdw2sjcm5.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/zubjgw8k5txg3o9x",
+          database : 'zubjgw8k5txg3o9x',
+          user: "kv4l0861ryo46pmj",
+          password: "jz5iyomcy0gw8fo5",
           insecureAuth : true
         });
         con.connect(function(err) {
@@ -93,14 +94,14 @@ module.exports = {
   },
   traerAnalitico: (req, res) => {
     console.log( Date() + ": /traerAnalitico" );  
-    try {
-      var con = mysql.createConnection({
-        host: "localhost",
-        database : 'estudiante',
-        user: "root",
-        password: "password",
-        insecureAuth : true
-      });
+     try {
+        var con = mysql.createConnection({
+          host: "mysql://kv4l0861ryo46pmj:jz5iyomcy0gw8fo5@durvbryvdw2sjcm5.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/zubjgw8k5txg3o9x",
+          database : 'zubjgw8k5txg3o9x',
+          user: "kv4l0861ryo46pmj",
+          password: "jz5iyomcy0gw8fo5",
+          insecureAuth : true
+        });
       con.connect(function(err) {
         if (err) throw err;
         console.log("Connected!");
@@ -111,6 +112,72 @@ module.exports = {
           return res.send(result)
         });
       });
+  }
+  catch (e) {
+      console.error( e )
+      res.status( 500 )
+      res.send( e )
+    }
+  },
+  traerEstudiante: (req, res) => {
+    console.log( Date() + ": /traerEstudiante" );  
+     try {
+        var con = mysql.createConnection({
+          host: "durvbryvdw2sjcm5.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
+          database : 'zubjgw8k5txg3o9x',
+          user: "kv4l0861ryo46pmj",
+          password: "jz5iyomcy0gw8fo5",
+          insecureAuth : true
+        });
+      con.connect(function(err) {
+        if (err) throw err;
+        console.log("Connected a web!");
+        con.query('select * from estudiantes;' //HAY Q TRAER ID ESTUDIANTE DE PARAMETRO
+        , function (err, result) {        
+          if (err) throw err;
+          console.log("Result: " + result);
+          return res.send(result)
+        });
+      });
+  }
+  catch (e) {
+      console.error( e )
+      res.status( 500 )
+      res.send( e )
+    }
+  },
+  inscribirEstudianteCursada: (req, res) => {
+    console.log( Date() + ": /inscribirEstudianteCursada" );  
+     try {
+        var con = mysql.createConnection({
+          host: "localhost",
+          database : 'inscripciones',
+          user: "root",
+          password: "password",
+          insecureAuth : true
+        });
+        var request = require('request');
+        request('https://administrador-unla.herokuapp.com/api/estudiantes/1', function (error, response, body) {
+            if (!error && response.statusCode == 200) {
+                console.log(body) // Print the google web page.
+                var responseJson = JSON.stringify(body);
+                con.connect(function(err) {
+                  if (err) throw err;
+                  console.log("Connected a web!");
+                  con.query('INSERT INTO `inscripciones`.`alumnoscursada`(`datosAlumno`,`Materias_idMaterias`,`Materias_Carreras_idCarreras`)' +
+                  'VALUES('+ responseJson +',1,1);' //HAY Q TRAER ID ESTUDIANTE DE PARAMETRO
+                  , function (err, result) {        
+                      if (err) throw err;
+                      console.log("Result: " + result);
+                      return res.send(result)
+                  });
+                });
+             }
+             else{
+              console.log("error") // Print the google web page.
+             }
+        })
+       
   }
   catch (e) {
       console.error( e )
