# api/swagger/swagger.yaml
@@ -96,6 +96,42 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"           
+  /traerEstudiante:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: estudiante
+    get:
+      description: Returns 'Hello' to the caller
+      # used as the method name of the controller
+      operationId: traerEstudiante
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/HelloWorldResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"  
+  /inscribirEstudianteCursada:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: estudiante
+    get:
+      description: Returns 'Hello' to the caller
+      # used as the method name of the controller
+      operationId: inscribirEstudianteCursada
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/HelloWorldResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse" 
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
